# The-Athenaeum

./: .coverage  .gitignore  README.md  pyproject.toml
engine/: board.py  constants.py  evaluation.py  game.py  generator.py  minimax.py  move.py  perft.py  piece.py
tests/: conftest.py  helpers.py  test_board.py  test_evaluation.py  test_game.py  test_generator.py  test_minimax.py  test_move.py  test_perft.py  test_piece.py
